@@ -28,6 +28,7 @@
         <release tarname="gcc-4.5.2-1-mingw32-lic.tar.lzma" />
         <release tarname="gcc-4.6.1-2-mingw32-lic.tar.lzma" />
         <release tarname="gcc-4.6.2-1-mingw32-lic.tar.lzma" />
+        <release tarname="gcc-4.7.0-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="bin">
@@ -36,6 +37,9 @@
           <requires eq="libquadmath-%-mingw32-dll-0.tar" />
         </release>
         <release tarname="gcc-core-4.6.2-1-mingw32-bin.tar.lzma">
+          <requires eq="libquadmath-%-mingw32-dll-0.tar" />
+        </release>
+        <release tarname="gcc-core-4.7.0-1-mingw32-bin.tar.lzma">
           <requires eq="libquadmath-%-mingw32-dll-0.tar" />
         </release>
 
@@ -55,12 +59,14 @@
         <release tarname="gcc-4.5.2-1-mingw32-doc.tar.lzma" />
         <release tarname="gcc-4.6.1-2-mingw32-doc.tar.lzma" />
         <release tarname="gcc-4.6.2-1-mingw32-doc.tar.lzma" />
+        <release tarname="gcc-4.7.0-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lang">
         <release tarname="gcc-4.5.2-1-mingw32-lang.tar.lzma" />
         <release tarname="gcc-4.6.1-2-mingw32-lang.tar.lzma" />
         <release tarname="gcc-4.6.2-1-mingw32-lang.tar.lzma" />
+        <release tarname="gcc-4.7.0-1-mingw32-lang.tar.lzma" />
       </component>
     </package>
 
@@ -90,6 +96,7 @@
         <release tarname="libgcc-4.5.2-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libgcc-4.6.1-2-mingw32-dll-1.tar.lzma" />
         <release tarname="libgcc-4.6.2-1-mingw32-dll-1.tar.lzma" />
+        <release tarname="libgcc-4.7.0-1-mingw32-dll-1.tar.lzma" />
       </component>
     </package>
 
@@ -118,6 +125,9 @@
         <release tarname="gcc-ada-4.6.2-1-mingw32-bin.tar.lzma">
           <requires eq="libgnat-%-mingw32-dll-4_6.tar" />
         </release>
+        <release tarname="gcc-ada-4.7.0-1-mingw32-bin.tar.lzma">
+          <requires eq="libgnat-%-mingw32-dll-4_7.tar" />
+        </release>
       </component>
     </package>
 
@@ -143,6 +153,7 @@
       <component class="dll">
         <release tarname="libgnat-4.5.2-1-mingw32-dll-4_5.tar.lzma" />
         <release tarname="libgnat-4.6.2-1-mingw32-dll-4_6.tar.lzma" />
+        <release tarname="libgnat-4.7.0-1-mingw32-dll-4_7.tar.lzma" />
       </component>
     </package>
 
@@ -169,6 +180,7 @@
         <release tarname="gcc-c++-4.5.2-1-mingw32-bin.tar.lzma" />
         <release tarname="gcc-c++-4.6.1-2-mingw32-bin.tar.lzma" />
         <release tarname="gcc-c++-4.6.2-1-mingw32-bin.tar.lzma" />
+        <release tarname="gcc-c++-4.7.0-1-mingw32-bin.tar.lzma" />
       </component>
     </package>
 
@@ -195,6 +207,7 @@
         <release tarname="libstdc++-4.5.2-1-mingw32-dll-6.tar.lzma" />
         <release tarname="libstdc++-4.6.1-2-mingw32-dll-6.tar.lzma" />
         <release tarname="libstdc++-4.6.2-1-mingw32-dll-6.tar.lzma" />
+        <release tarname="libstdc++-4.7.0-1-mingw32-dll-6.tar.lzma" />
       </component>
     </package>
 
@@ -221,6 +234,7 @@
         <release tarname="gcc-fortran-4.5.2-1-mingw32-bin.tar.lzma" />
         <release tarname="gcc-fortran-4.6.1-2-mingw32-bin.tar.lzma" />
         <release tarname="gcc-fortran-4.6.2-1-mingw32-bin.tar.lzma" />
+        <release tarname="gcc-fortran-4.7.0-1-mingw32-bin.tar.lzma" />
       </component>
     </package>
 
@@ -247,6 +261,7 @@
         <release tarname="libgfortran-4.5.2-1-mingw32-dll-3.tar.lzma" />
         <release tarname="libgfortran-4.6.1-2-mingw32-dll-3.tar.lzma" />
         <release tarname="libgfortran-4.6.2-1-mingw32-dll-3.tar.lzma" />
+        <release tarname="libgfortran-4.7.0-1-mingw32-dll-3.tar.lzma" />
       </component>
     </package>
 
@@ -302,6 +317,9 @@
         <release tarname="gcc-objc-4.6.2-1-mingw32-bin.tar.lzma">
           <requires eq="libobjc-%-mingw32-dll-3.tar" />
         </release>
+        <release tarname="gcc-objc-4.7.0-1-mingw32-bin.tar.lzma">
+          <requires eq="libobjc-%-mingw32-dll-4.tar" />
+        </release>
       </component>
     </package>
 
@@ -328,6 +346,7 @@
         <release tarname="libobjc-4.5.2-1-mingw32-dll-2.tar.lzma" />
         <release tarname="libobjc-4.6.1-2-mingw32-dll-3.tar.lzma" />
         <release tarname="libobjc-4.6.2-1-mingw32-dll-3.tar.lzma" />
+        <release tarname="libobjc-4.7.0-1-mingw32-dll-4.tar.lzma" />
       </component>
     </package>
 
@@ -342,6 +361,7 @@
         <release tarname="libgomp-4.5.2-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libgomp-4.6.1-2-mingw32-dll-1.tar.lzma" />
         <release tarname="libgomp-4.6.2-1-mingw32-dll-1.tar.lzma" />
+        <release tarname="libgomp-4.7.0-1-mingw32-dll-1.tar.lzma" />
       </component>
     </package>
 
@@ -355,6 +375,7 @@
         <release tarname="libssp-4.5.2-1-mingw32-dll-0.tar.lzma" />
         <release tarname="libssp-4.6.1-2-mingw32-dll-0.tar.lzma" />
         <release tarname="libssp-4.6.2-1-mingw32-dll-0.tar.lzma" />
+        <release tarname="libssp-4.7.0-1-mingw32-dll-0.tar.lzma" />
       </component>
     </package>
 
@@ -367,6 +388,7 @@
       <component class="dll">
         <release tarname="libquadmath-4.6.1-2-mingw32-dll-0.tar.lzma" />
         <release tarname="libquadmath-4.6.2-1-mingw32-dll-0.tar.lzma" />
+        <release tarname="libquadmath-4.7.0-1-mingw32-dll-0.tar.lzma" />
       </component>
     </package>
 
